--- a/package.json
+++ b/package.json
@@ -21,5 +21,16 @@
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.0"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.2",
+    "fund": "^1.0.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2"
   }
 }
